# MDA

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DATA_MODEL.md  GIT_SETUP.md  GOVERNANCE.md  LICENSE  README.md  VIEWER_STRUCTURE.md  docker-compose.yml
companies/: PROMPT_FOR_CLAUDE_CODE.md  companies.csv  company_brand_mapping.csv  schema_proposal_00006.md  schema_proposal_00007.md
docs/: DECISIONS.md  ROADMAP.md  RUNBOOK.md  phase-2.0-design.md  phase-2.0-tasks.md  phase-2.1-design.md  phase-2.1-tasks.md
scripts/: build_dart_mapping.py  (+17 more)
worker/: Dockerfile  _smoke_ingest.py  categories.py  main.py  pyproject.toml
worker/agent/: __init__.py  analyst.py  llm_client.py  main.py  prompts.py  validators.py
worker/dart/: README.md  config.py  corp_mapping.py  disclosures.py  financials.py  main.py  models.py
worker/dart/pdf_parsing/: README.md  main.py  target_selector.py  xml_fetcher.py  xml_parser.py
worker/detectors/: __init__.py  _thresholds.py  base.py  main.py  new_entrant.py  price_change.py  promo_start.py  rank_surge.py  review_velocity.py  wishlist_surge.py
worker/enrichment/: __init__.py  apply_company_brands.py  brand_metadata.py  extract_company_brands.py  main.py  prompts.py  verify_brand_musinsa.py
worker/ingest/: __init__.py  dart_writer.py  detail_writer.py  supabase_writer.py
worker/matchers/: __init__.py  embedder.py  main.py  snowflake_pull.py  vector_match.py
worker/scrapers/: __init__.py  _investigate.py  _investigate_dump.json  _investigate_findings.md  _investigate_product.py  _investigate_product_dump.json  _investigate_product_findings.md  _ranking_product_api.json  _smoke_product.py  _smoke_product_result.json  base.py  musinsa_product.py  musinsa_ranking.py
(+132 files in other folders)
